# nlp

./: pyproject.toml
data/weights/: mlp_params.pth
src/: bigram.py  makemore.py  utils.py
